--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title></title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" type="" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
